compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/WrongReturnTypeStructure.kt
package test

import java.util.*

public open class WrongReturnTypeStructure : Object() {
    public open fun foo(p0 : String?, p1 : List<Map.Entry<String, String>>?) : String? = ""
}
